--- a/src/css/CrudEntradas.css
+++ b/src/css/CrudEntradas.css
@@ -1,5 +1,5 @@
-.container-table {
-  width: 60%;
+.container-primary {
+  width: 100%;
 }
 .Container-formulario {
   margin: 0px;
@@ -24,5 +24,10 @@
   width: 300px;
 }
 .btn {
-  margin-bottom: 15px;
+  text-align: center;
+  margin-right: 5px;
+}
+
+.container-table {
+  width: 60%;
 }
