--- a/src/css/CrudEntradas.css
+++ b/src/css/CrudEntradas.css
@@ -23,11 +23,11 @@
   margin-right: 15px;
   width: 300px;
 }
-.btn {
+.btnRegistro {
   text-align: center;
   margin-right: 5px;
 }
 
-.container-table {
-  width: 60%;
+.imgEditar {
+  width: 30px;
 }
